parser.c
#include <stdio.h>
#include <stdlib.h>

#include "9cc.h"

Vector *tokens;

Node *new_node(int ty, Node *lhs, Node *rhs) {
    Node *node = malloc(sizeof(Node));
    node->ty = ty;
    node->lhs = lhs;
    node->rhs = rhs;
    return node;
}

Node *new_node_num(int val) {
    Node *node = malloc(sizeof(Node));
    node->ty = ND_NUM;
    node->val = val;
    return node;
}

Node *new_node_ident(char *name) {
    Node *node = malloc(sizeof(Node));
    node->ty = ND_IDENT;
    node->name = name;
    return node;
}

Node *new_node_block(Vector *statements) {
    Node *node = malloc(sizeof(Node));
    node->ty = ND_BLOCK;
    node->statements = statements;
    return node;
}

Node *new_node_ifelse(Node *test_stmt, Node *then_stmt, Node *else_stmt) {
    Node *node = malloc(sizeof(Node));
    node->ty = ND_IFELSE;
    node->test_statement = test_stmt;
    node->then_statement = then_stmt;
    node->else_statement = else_stmt;
    return node;
}

int pos = 0;

int consume(int ty) {
    if ((((Token **)(tokens->data))[pos])->ty != ty) return 0;
    pos++;
    return 1;
}

void must_consume(int ty) {
    if (!consume(ty))
        error("%d:'%c'ではないトークンです: %s", ty, (char)ty,
              (((Token **)(tokens->data))[pos])->input);
}

Node *expr();

Node *term() {
    if (consume('(')) {
        Node *node = expr();
        if (!consume(')')) {
            error("開き括弧に対応する閉じ括弧がありません:%s\n",
                  (((Token **)(tokens->data))[pos])->input);
        }

        return node;
    }

    if ((((Token **)(tokens->data))[pos])->ty == TK_NUM) {
        return new_node_num((((Token **)(tokens->data))[pos++])->val);
    }

    if ((((Token **)(tokens->data))[pos])->ty == TK_IDENT) {
        return new_node_ident((((Token **)(tokens->data))[pos++])->name);
    }

    error("開き括弧でも数値でもないトークンです: %s\n",
          (((Token **)(tokens->data))[pos])->input);

    return 0; // unreachable here. This line exists to suppress warnings.
}

Node *unary() {
    if (consume('+')) return term();
    if (consume('-')) return new_node('-', new_node_num(0), term());
    return term();
}

Node *mul() {
    Node *node = unary();

    for (;;) {
        if (consume('*')) {
            node = new_node('*', node, unary());
        } else if (consume('/')) {
            node = new_node('/', node, unary());
        } else {
            return node;
        }
    }
}

Node *add() {
    Node *node = mul();

    for (;;) {
        if (consume('+')) {
            node = new_node('+', node, mul());
        } else if (consume('-')) {
            node = new_node('-', node, mul());
        } else {
            return node;
        }
    }
}

Node *relational() {
    Node *node = add();

    for (;;) {
        if (consume(TK_LE)) {
            node = new_node(ND_LE, node, add());
        } else if (consume(TK_GE)) {
            node = new_node(ND_LE, add(), node);
        } else if (consume(TK_LT)) {
            node = new_node(ND_LT, node, add());
        } else if (consume(TK_GT)) {
            node = new_node(ND_LT, add(), node);
        } else {
            return node;
        }
    }
}

Node *equality() {
    Node *node = relational();

    for (;;) {
        if (consume(TK_EQ)) {
            node = new_node(ND_EQ, node, relational());
        } else if (consume(TK_NE)) {
            node = new_node(ND_NE, node, relational());
        } else {
            return node;
        }
    }
}

Node *assign() {
    Node *node = equality();

    while (consume('=')) {
        node = new_node('=', node, assign());
    }
    return node;
}

Node *stmt() {
    if (consume('{')) {
        Vector *statements = new_vector();
        while (!consume('}')) vec_push(statements, stmt());
        return new_node_block(statements);
    }

    if (consume(TK_IF)) {
        must_consume('(');
        Node *test_stmt = expr();
        must_consume(')');
        Node *then_stmt = stmt();
        Node *else_stmt;
        if (consume(TK_ELSE)) {
            else_stmt = stmt();
        } else {
            else_stmt = new_node_block(new_vector());
        }
        return new_node_ifelse(test_stmt, then_stmt, else_stmt);

        // ここにpopを挟むべき？ statmentのときと
        //{ ... }のときでpopしてるかしてないかが違わないか？
    }

    Node *node;

    if (consume(TK_RETURN)) {
        node = new_node(TK_RETURN, assign(), NULL);
    } else {
        node = assign();
    }

    if (!consume(';'))
        error("';'ではないトークンです: %s",
              (((Token **)(tokens->data))[pos])->input);
    return node;
}

Node *expr() { return assign(); }

Node *code[100];

void program() {
    int i = 0;
    while ((((Token **)(tokens->data))[pos])->ty != TK_EOF) {
        code[i++] = stmt();
    }
    code[i] = NULL;
}

void parse(Vector *tokenized_tokens) {
    tokens = tokenized_tokens;
    program();
}
